# crabodex

./: .deepsource.toml  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: ci_cd.yml  documentation.yml
crabodex_cli/: Cargo.toml
crabodex_cli/src/: main.rs
crabodex_lib/: Cargo.toml
crabodex_lib/src/: lib.rs
crabodex_lib/src/core/: build_doc_structure.rs  build_navigation.rs  build_page_body.rs  constants.rs  create_html_document.rs  doc_node.rs  find_markdown_files.rs  front_matter_configuration.rs  mod.rs  parse_front_matter.rs
crabodex_lib/tests/ignored_test_files/: file_8.md
crabodex_lib/tests/test_files/: file.txt  file1.md  file5.md
crabodex_lib/tests/test_files/sub_dir_1/: file4.md  file6.md
crabodex_lib/tests/test_files/sub_dir_1/sub_sub_dir/: file3.md  file7.md
crabodex_lib/tests/test_files/sub_dir_2/: file2.md
documentation/: github-action.md  introduction.md  usage-cli-default-ignore.md  usage-cli-local.md  usage-cli-markdown-headers.md  usage-cli.md  usage-github-action.md
scripts/: install.ps1  install.sh
