[workspace]
members = [
  "crabodex_cli",
  "crabodex_lib",
]
resolver = "2"

[workspace.package]
authors = ["Fabien Huet <fabien.huet@gmail.com>"]
edition = "2021"
license = "MIT"
version = "1.0.0"

[workspace.dependencies]
clap = {version = "4.5.21", features = ["derive"]}
pulldown-cmark = "0.12.2"
serde = {version = "1.0.215", features = ["derive"]}
serde_yaml = "0.9"
walkdir = "2.3"
