[package]
authors.workspace = true
description = "A library for generating documentation from Markdown files"
edition.workspace = true
license.workspace = true
name = "crabodex_lib"
version.workspace = true

[dependencies]
pulldown-cmark.workspace = true
serde.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
yaml-rust = "0.4.5"
once_cell = "1.19.0"
html-minifier = "5.0.0"
regex = "1.10.6"
chrono = "0.4.38"
