[package]
authors.workspace = true
description = "A library for generating documentation from Markdown files"
edition.workspace = true
license.workspace = true
name = "crabodex_lib"
version.workspace = true

[dependencies]
chrono = "0.4.38"
html-minifier = "5.0.0"
once_cell = "1.19.0"
pulldown-cmark.workspace = true
serde.workspace = true
serde_yaml.workspace = true
syntect = "5.2.0"
walkdir.workspace = true
yaml-rust = "0.4.5"
